# telegram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  DEPLOYMENT.md  Dockerfile  README.md  USER_TESTING_GUIDE.md  ci_cd_test.txt  dashboard.py  dashboard_app.py  docker-compose.yml  log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  sync.sh  sync_env.sh  test_bot_comprehensive.py  test_summary.md
.github/workflows/: deploy.yml  quality.yml  tests.yml
bot/: __init__.py  __main__.py  main.py
bot/core/: __init__.py  app.py  config.py  database.py  exceptions.py  logging.py
bot/decorators/: __init__.py  auth.py
bot/handlers/: __init__.py  activity.py  admin.py  b2b.py  callbacks.py  commands.py  crypto.py  errors.py  gambling.py  image_callbacks.py  images.py  messages.py  mines.py  mood.py  nsfw.py  profanity.py  synonyms.py  timezone.py  todo.py  utilities.py  voting.py
bot/services/: __init__.py  activity_service.py  auth_service.py  b2b_service.py  crypto_service.py  image_service.py  mines_service.py  mood_service.py  nsfw_service.py  openai_service.py  profanity_service.py  synonym_service.py  timezone_service.py  todo_service.py  user_service.py  voting_service.py
bot/utils/: __init__.py  formatters.py  rate_limiter.py  validators.py
scripts/: run_tests.py  run_tests.sh
static/css/: dashboard.css
templates/: dashboard.html
tests/: conftest.py
tests/e2e/: __init__.py  test_bot_e2e.py
tests/integration/: test_bot_integration.py
tests/unit/: test_handlers.py  test_services.py  test_utils.py
to_port/: base_bot.py  bc_handler.py  bet_calculations.py  bot_handlers.py  casino_data.json  casino_db.py  casino_handler.py  command_module.py  crypto_converter.py  data_handlers.py  gpt_commands.py  image_handlers.py  menu_handler.py  mines_calculator.py  mood_analysis.py  nsfw.py  reminder_module.py  telegram_bot.py  timezone_handler.py  todo_list.py  utils.py  wen_handlers.py
